--- a/assets/mobirise/css/mbr-2.css
+++ b/assets/mobirise/css/mbr-2.css
@@ -293,7 +293,7 @@
   cursor: pointer;
   border: 0;
   padding: 2% 2%;
-  background: #145995;
+  background: #274abb;
   border-radius: 6% !important;
 }
 
@@ -317,4 +317,60 @@
 .wrapper:hover > .card-img.pb-3.align-center > img {
   width: 70px;
   height: 70px;
+}
+
+.material-btn {
+  position: relative;
+
+  display: block;
+  margin: 30px auto;
+  padding: 0;
+
+  overflow: hidden;
+
+  border-width: 0;
+  outline: none;
+  border-radius: 2px;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, .6);
+  
+  background-color: #145995;
+  color: #ecf0f1;
+  
+  transition: background-color .3s;
+}
+
+.material-btn:hover, .material-btn:focus {
+  background-color: #024075;
+}
+
+.material-btn > * {
+  position: relative;
+}
+.material-btn:before {
+  content: "";
+  
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  
+  display: block;
+  width: 0;
+  padding-top: 0;
+    
+  border-radius: 100%;
+  
+  background-color: rgba(236, 240, 241, .3);
+  
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.material-btn:active:before {
+  width: 120%;
+  padding-top: 120%;
+  
+  transition: width .2s ease-out, padding-top .2s ease-out;
 }
