--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -10,6 +10,16 @@ position: fixed;
 bottom: 5%;
 left: 80%;
 }
+.electro{
+      padding-top: 10vh;
+    padding-bottom: 0vh;
+    }
+     @media (max-width: 768px) {
+       .electro{
+      padding-top: 10vh;
+    padding-bottom: 0vh;
+    }
+     }
 a.top > span{
   margin: -10% 30%;
 }
@@ -2747,4 +2757,60 @@ background-color: #f5f5f5 !important;
 }
 .form-group>textarea {
 background-color: #f5f5f5 !important;
+}
+
+.material-btn {
+  position: relative;
+
+  display: block;
+  margin: 30px auto;
+  padding: 0;
+
+  overflow: hidden;
+
+  border-width: 0;
+  outline: none;
+  border-radius: 2px;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, .6);
+  
+  background-color: #145995;
+  color: #ecf0f1;
+  
+  transition: background-color .3s;
+}
+
+.material-btn:hover, .material-btn:focus {
+  background-color: #024075;
+}
+
+.material-btn > * {
+  position: relative;
+}
+.material-btn:before {
+  content: "";
+  
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  
+  display: block;
+  width: 0;
+  padding-top: 0;
+    
+  border-radius: 100%;
+  
+  background-color: rgba(236, 240, 241, .3);
+  
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.material-btn:active:before {
+  width: 120%;
+  padding-top: 120%;
+  
+  transition: width .2s ease-out, padding-top .2s ease-out;
 }
