--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1604,7 +1604,7 @@ body {
   display: none;
 }
 .cid-ri3Sl6auij {
-  padding-top: 135px;
+  padding-top: 32vh;
   padding-bottom: 135px;
   background-image: url("../../../assets/images/mbr-1623x1080.jpg");
 }
@@ -1704,6 +1704,11 @@ body {
     -webkit-transform: scale(1, 1);
     transform: scale(1, 1);
   }
+  .cid-ri3Sl6auij {
+  padding-top: 22vh;
+  padding-bottom: 135px;
+  background-image: url("../../../assets/images/mbr-1623x1080.jpg");
+}
 }
 .cid-ri3PlLS3nU .dropdown .dropdown-menu .dropdown-item {
   display: flex;
@@ -2082,6 +2087,11 @@ body {
   .cid-ri3ST0uqYA .nav-item {
     display: table-row !important;
   }
+  .cid-ri3Sl6auij {
+  padding-top: 12vh;
+  padding-bottom: 135px;
+  background-image: url("../../../assets/images/mbr-1623x1080.jpg");
+}
 }
 .cid-ri3Rx2rNcs {
   padding-top: 90px;
@@ -2166,6 +2176,11 @@ body {
   .cid-ri3XffOPGm .text-block {
     margin-bottom: 2rem;
   }
+  .cid-ri3Sl6auij {
+  padding-top: 135px;
+  padding-bottom: 135px;
+  background-image: url("../../../assets/images/mbr-1623x1080.jpg");
+}
 }
 .cid-ri3Y3MhYvs {
   padding-top: 45px;
@@ -2762,7 +2777,7 @@ background-color: #f5f5f5 !important;
 .material-btn {
   position: relative;
 
-  display: block;
+  display: inline-flex;
   margin: 30px auto;
   padding: 0;
 
@@ -2773,14 +2788,23 @@ background-color: #f5f5f5 !important;
   border-radius: 2px;
   box-shadow: 0 1px 4px rgba(0, 0, 0, .6);
   
+  transition: background-color .3s;
+  margin-right:10px;
+}
+.material-btn-blue {
   background-color: #145995;
   color: #ecf0f1;
-  
-  transition: background-color .3s;
+}
+.material-btn-blue:hover, .material-btn-blue:focus {
+  background-color: #024075;
 }
 
-.material-btn:hover, .material-btn:focus {
-  background-color: #024075;
+.material-btn-white {
+  background-color: #ecf0f1;
+  color: #322a2a;
+}
+.material-btn-white:hover, .material-btn-white:focus {
+  background-color: white;
 }
 
 .material-btn > * {
